--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
@@ -17,7 +19,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
