--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.3",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.5.0",
